# classic-web-system-lsp

./: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  lsp-performance-ineffective-branches-20260529.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release-vsix.yml
.workflow/asp-lsp-no-cache-benchmark-targets/: final-report.md  orchestration.md  plan.md  state.json
.workflow/asp-lsp-rust-analyzer-a-group-all-phases/: final-report.md  orchestration.md  plan.md  state.json
.workflow/asp-lsp-rust-analyzer-phase-1-introspection/: final-report.md  orchestration.md  plan.md  state.json
.workflow/asp-lsp-rust-benchmark-50-percent/: final-report.md  orchestration.md  plan.md  state.json
apps/vscode/: .vscodeignore  README.md  language-configuration.json  package.json  (+5 more)
crates/asp-ide/: Cargo.toml
crates/asp-ide/examples/: benchmark_huge.rs
crates/asp-ide/src/: lib.rs
crates/asp-lsp-server/: Cargo.toml
crates/asp-lsp-server/src/: main.rs
crates/asp-lsp-server/tests/: stdio.rs
docs/: rust-analyzer-speed-step9.md  rust-cache-architecture.md  rust-capability-parity.md  rust-cutover-step8.md  rust-performance-step7.md
scripts/: benchmark-bulk-export.mjs  benchmark-cache-mode.mjs  benchmark-document-change.mjs  benchmark-huge.mjs  benchmark-include-tree.mjs  benchmark-large-worker.mjs  benchmark-large.mjs  benchmark-native-payload.mjs  benchmark-scale.mjs  build-native-core.mjs  build-server.mjs  build-wasm-core.mjs  clean-dist.mjs  embedded-language-benchmark.mjs
(+88 files in other folders)
