[workspace]
members = [
  "crates/asp-analysis",
  "crates/asp-core",
  "crates/asp-ide",
  "crates/asp-lsp-server",
  "crates/asp-sidecar-protocol",
  "crates/asp-syntax",
]
resolver = "2"

[workspace.dependencies]
asp-analysis = { path = "crates/asp-analysis" }
asp-lsp-core = { path = "crates/asp-core" }
asp-ide = { path = "crates/asp-ide" }
asp-sidecar-protocol = { path = "crates/asp-sidecar-protocol" }
asp-syntax = { path = "crates/asp-syntax" }
crossbeam-channel = "0.5"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
ropey = "1.6"
salsa = "0.26.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
