[package]
name = "asp-ide"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
asp-analysis = { workspace = true }
asp-sidecar-protocol = { workspace = true }
asp-syntax = { workspace = true }
ropey = { workspace = true }
salsa = { workspace = true }
serde_json = { workspace = true }
