[package]
name = "asp-lsp-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
asp-ide = { workspace = true }
asp-sidecar-protocol = { workspace = true }
crossbeam-channel = { workspace = true }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
serde_json = { workspace = true }
